# bartt_poc_repo

./: README.md  arch-diagram.puml  docker-compose.aws.yml  docker-compose.yml  gen_arch_diagram.py
agentcore/: agentcore.json  aws-targets.json
agentcore/.cli/: deployed-state.json
agentcore/cdk/: cdklist-err.txt  kb-outputs.json  package-lock.json  tsconfig.json
agentcore/cdk/cdk.out.test/: AgentCore-barttagentcorerepo-default.assets.json  AgentCore-barttagentcorerepo-default.metadata.json  AgentCore-barttagentcorerepo-default.template.json  KnowledgeBase-barttagentcorerepo-default.assets.json  KnowledgeBase-barttagentcorerepo-default.metadata.json  KnowledgeBase-barttagentcorerepo-default.template.json  manifest.json  tree.json
agentcore/cdk/cdk.out.test/asset.8d84c7d0e387f7a9d8e58adb352c07625960f48ac6350f7c8d3836992a88af68/: main.py  pyproject.toml
agentcore/cdk/cdk.out.test/asset.8d84c7d0e387f7a9d8e58adb352c07625960f48ac6350f7c8d3836992a88af68/mcp_client/: client.py
agentcore/cdk/cdk.out.test/asset.8d84c7d0e387f7a9d8e58adb352c07625960f48ac6350f7c8d3836992a88af68/model/: load.py
agentcore/cdk/cdk.out.test/asset.8d84c7d0e387f7a9d8e58adb352c07625960f48ac6350f7c8d3836992a88af68/tests/: conftest.py  test_prompt_builder.py
agentcore/cdk/lib/: cdk-stack.ts  knowledge-base-stack.ts
agentcore/cdk/test/: knowledge-base.test.ts
app/barttagent/: Dockerfile  config.py  main.py  pyproject.toml
app/barttagent/guardrails/: __init__.py  audit.py  confidence.py  input_validation.py  sql_safety.py  (+3 more)
barttuiapp/: .dockerignore  Dockerfile  app.py  requirements.txt
(+10 files in other folders)
